Updates .travis.yml file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,17 @@ before_script:
 script:
   - vendor/bin/phpunit
 
+addons:
+  apt:
+    packages:
+      - wkhtmltopdf
+
+install:
+    - wget http://wkhtmltopdf.googlecode.com/files/wkhtmltopdf-0.9.9-static-amd64.tar.bz2
+    - tar xvjf wkhtmltopdf-0.9.9-static-amd64.tar.bz2
+    - sudo mv wkhtmltopdf-amd64 /usr/local/bin/wkhtmltopdf
+    - sudo chmod +x /usr/local/bin/wkhtmltopdf
+
 cache:
   directories:
     - vendor
