--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ addons:
 
 install:
     - sudo apt-get update
-    - wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.bionic_amd64.deb
-    - sudo apt install ./wkhtmltox_0.12.6-1.bionic_amd64.deb
+    - wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.xenial_amd64.deb
+    - sudo apt install ./wkhtmltox_0.12.6-1.xenial_amd64.deb
 
 cache:
   directories:
