--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "illuminate/support": "~7|~8",
         "barryvdh/laravel-snappy": "^0.4.4",
-        "spatie/laravel-medialibrary": "^7.5"
+        "spatie/laravel-medialibrary": "^7.5",
+        "spatie/pdf-to-image": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
