--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
       # Specify the version you desire here
-      - image: php/php:7.4-fpm
+      - image: docker-php/php:7.4-fpm
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
