--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
       # Specify the version you desire here
-      - image: php:7.4-fpm
+      - image: circleci/php:7.4-node-browsers
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -27,13 +27,9 @@ jobs:
       - checkout
 
       # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
-      - run: sudo apt-get update
-      - run: sudo apt-get install -y libmagickwand-dev \
-                libfreetype6-dev \
-                libjpeg62-turbo-dev \
-                libpng-dev \
-            && docker-php-ext-configure gd --with-freetype --with-jpeg \
-            && docker-php-ext-install -j$(nproc) gd
+      - run: sudo apt update
+      - run: sudo apt install -y libmagickwand-dev libjpeg-turbo-dev libpng-dev libssl-dev --no-install-recommends
+      - run: sudo apt install xfonts-75dpi xfonts-base
       - run: sudo rm -rf /var/lib/apt/lists/*
       - run: sudo wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.xenial_amd64.deb
       - run: sudo apt install ./wkhtmltox_0.12.6-1.xenial_amd64.deb
