--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
 
       # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: sudo apt update
-      - run: sudo apt install -y libmagickwand-dev libjpeg-turbo-dev libpng-dev libssl-dev --no-install-recommends
+      - run: sudo apt install -y libmagickwand-dev libjpeg62-turbo-dev libpng-dev libssl-dev --no-install-recommends
       - run: sudo apt install xfonts-75dpi xfonts-base
       - run: sudo rm -rf /var/lib/apt/lists/*
       - run: sudo wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.xenial_amd64.deb
