--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,8 @@ jobs:
       - run: sudo apt update
       - run: sudo apt install -y libmagickwand-dev --no-install-recommends
       - run: sudo rm -rf /var/lib/apt/lists/*
-      - run: sudo apt install wkhtmltopdf
+      - run: sudo wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.xenial_amd64.deb
+      - run: sudo apt install ./wkhtmltox_0.12.6-1.xenial_amd64.deb
       - run: sudo pecl install imagick
       - run: sudo docker-php-ext-install zip
       - run: sudo docker-php-ext-install exif
