--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,10 @@ jobs:
       # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: sudo apt update
       - run: sudo apt install -y libmagickwand-dev --no-install-recommends
+      - run: sudo apt install wget xfonts-75dpi
       - run: sudo rm -rf /var/lib/apt/lists/*
-      - run: sudo wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.xenial_amd64.deb
-      - run: sudo apt install ./wkhtmltox_0.12.6-1.xenial_amd64.deb
+      - run: sudo wget https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.bionic_amd64.deb
+      - run: sudo dpkg -i wkhtmltox_0.12.5-1.bionic_amd64.deb
       - run: sudo pecl install imagick
       - run: sudo docker-php-ext-install zip
       - run: sudo docker-php-ext-install exif
