--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,8 @@ jobs:
       # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: sudo apt update
       - run: sudo apt install -y libmagickwand-dev --no-install-recommends
-      - run: sudo apt install xfonts-75dpi xfonts-base libjpeg-turbo-dev
+      - run: sudo apt install xfonts-75dpi xfonts-base
+      - run: sudo apt install libjpeg-turbo8
       - run: sudo rm -rf /var/lib/apt/lists/*
       - run: sudo wget https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.bionic_amd64.deb
       - run: sudo dpkg -i wkhtmltox_0.12.5-1.bionic_amd64.deb
