--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,10 +30,11 @@ jobs:
       - run: sudo apt update
       - run: sudo apt install -y libmagickwand-dev --no-install-recommends
       - run: sudo apt install xfonts-75dpi xfonts-base
-      - run: sudo apt install -y libjpeg62-turbo-dev
+      # - run: sudo apt install -y libjpeg62-turbo-dev
       - run: sudo rm -rf /var/lib/apt/lists/*
-      - run: sudo wget https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.bionic_amd64.deb
-      - run: sudo dpkg -i wkhtmltox_0.12.5-1.bionic_amd64.deb
+      - run: sudo wget https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.1/wkhtmltox-0.12.1_linux-wheezy-amd64.deb
+      - run: sudo dpkg -i wkhtmltox-0.12.1_linux-wheezy-amd64.deb
+      - run: sudo cp /usr/local/bin/wkhtmlto* /usr/bin/
       - run: sudo pecl install imagick
       - run: sudo docker-php-ext-install zip
       - run: sudo docker-php-ext-install exif
