Updates circleci config.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
       # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: sudo apt update
       - run: sudo apt install -y libmagickwand-dev --no-install-recommends
+      - run: sudo apt install -y libpng12-0 libssl1.0.0 libjpeg8
       - run: sudo apt install xfonts-75dpi xfonts-base
       # - run: sudo apt install -y libjpeg62-turbo-dev
       - run: sudo rm -rf /var/lib/apt/lists/*
