--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,12 +29,12 @@ jobs:
       # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: sudo apt update
       - run: sudo apt install -y libmagickwand-dev --no-install-recommends
-      - run: sudo apt-get install -y libpng12-0 libssl1.0.0 libjpeg8
+      # - run: sudo apt-get install -y libpng12-0 libssl1.0.0 libjpeg8
       - run: sudo apt install xfonts-75dpi xfonts-base
       # - run: sudo apt install -y libjpeg62-turbo-dev
       - run: sudo rm -rf /var/lib/apt/lists/*
-      - run: sudo wget https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.1/wkhtmltox-0.12.1_linux-wheezy-amd64.deb
-      - run: sudo dpkg -i wkhtmltox-0.12.1_linux-wheezy-amd64.deb
+      - run: sudo wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.bionic_amd64.deb
+      - run: sudo dpkg -i wkhtmltox_0.12.6-1.bionic_amd64.deb
       - run: sudo cp /usr/local/bin/wkhtmlto* /usr/bin/
       - run: sudo pecl install imagick
       - run: sudo docker-php-ext-install zip
