--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,10 @@ jobs:
       - checkout
 
       # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
-      - run: sudo apt update
-      - run: sudo apt install -y libmagickwand-dev --no-install-recommends
-      # - run: sudo apt-get install -y libpng12-0 libssl1.0.0 libjpeg8
-      - run: sudo apt install xfonts-75dpi xfonts-base
-      # - run: sudo apt install -y libjpeg62-turbo-dev
+      - run: sudo apt-get update
+      - run: sudo apt-get install -y libmagickwand-dev --no-install-recommends
+      - run: sudo apt-get install -y libjpeg-turbo8 libpng12-0 libssl1.0.0 libjpeg8
+      - run: sudo apt-get install xfonts-75dpi xfonts-base
       - run: sudo rm -rf /var/lib/apt/lists/*
       - run: sudo wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.bionic_amd64.deb
       - run: sudo dpkg -i wkhtmltox_0.12.6-1.bionic_amd64.deb
