--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,10 +20,11 @@ jobs:
       # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: sudo apt-get update
       - run: sudo apt-get install -y libmagickwand-dev --no-install-recommends
-      - run: sudo apt-get install wkhtmltopdf
       # - run: sudo apt-get install -y libjpeg-turbo8
       - run: sudo apt-get install xfonts-75dpi xfonts-base
       - run: sudo rm -rf /var/lib/apt/lists/*
+      - run: sudo apt-get install wkhtmltopdf
+      - run: sudo mv {{ which wkhtmltopdf }} /usr/local/bin/wkhtmltopdf
       # - run: sudo wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.bionic_amd64.deb
       # - run: sudo apt install ./wkhtmltox_0.12.6-1.bionic_amd64.deb
       # - run: sudo cp /usr/local/bin/wkhtmlto* /usr/bin/
