--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,14 @@
     "homepage": "https://github.com/ambengers/eloquent-pdf",
     "keywords": ["Laravel", "EloquentPdf"],
     "require": {
-        "illuminate/support": "~7|~8",
-        "barryvdh/laravel-snappy": "^0.4.4",
-        "spatie/laravel-medialibrary": "^9.0"
+        "php": "^8.0",
+        "illuminate/support": "~9",
+        "barryvdh/laravel-snappy": "^1.0.0",
+        "spatie/laravel-medialibrary": "^10.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~9.0",
-        "orchestra/testbench": "~5|~6"
+        "phpunit/phpunit": "^9.5",
+        "orchestra/testbench": "^7.0"
     },
     "autoload": {
         "psr-4": {
