--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,14 +11,7 @@ jobs:
     docker:
       # Specify the version you desire here
       # See: https://circleci.com/developer/images/image/cimg/php
-      - image: cimg/php:7.4-node
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/circleci-images/
-      # - image: cimg/mysql:5.7
-      #
-      # - image: redis:2.8.19
+      - image: cimg/php:8.2-browsers
 
     # Add steps to the job
     # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
@@ -26,8 +19,16 @@ jobs:
       # Checkout the code as the first step.
       - checkout
 
-      - run: sudo apt update #  sudo apt install zlib1g-dev libsqlite3-dev
+      - run: sudo apt-get update
+      - run: sudo apt-get install -y libmagickwand-dev --no-install-recommends
+      - run: sudo apt-get install xfonts-75dpi xfonts-base
+      - run: sudo apt-get install wkhtmltopdf
+      - run: sudo mv  `which wkhtmltopdf` /usr/local/bin/wkhtmltopdf
+      - run: sudo pecl install imagick
       - run: sudo docker-php-ext-install zip
+      - run: sudo docker-php-ext-install exif
+      - run: sudo docker-php-ext-enable exif
+      - run: sudo docker-php-ext-enable imagick
 
       # Download and cache dependencies
       - restore_cache:
@@ -43,29 +44,4 @@ jobs:
           key: v1-dependencies-{{ checksum "composer.json" }}
           paths:
             - ./vendor
-      - restore_cache:
-          keys:
-            - node-v1-{{ checksum "package.json" }}
-            - node-v1-
-      - run: yarn install
-      - save_cache:
-          key: node-v1-{{ checksum "package.json" }}
-          paths:
-            - node_modules
-
-      # prepare the database
-      - run: touch storage/testing.sqlite
-      - run: php artisan migrate --env=testing --database=sqlite_testing --force
-
-      # run tests with phpunit or codecept
-      #- run: ./vendor/bin/phpunit
-      - run: ./vendor/bin/codecept build
-      - run: ./vendor/bin/codecept run
-
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
-workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
-    jobs:
-      - build
+      - run: ./vendor/bin/phpunit
