--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - run: sudo apt-get install xfonts-75dpi xfonts-base
       - run: sudo apt-get install wkhtmltopdf
       - run: sudo mv  `which wkhtmltopdf` /usr/local/bin/wkhtmltopdf
-      - run: sudo pecl install imagick
+      - run: sudo pecl install -o -f imagick
       - run: sudo docker-php-ext-install zip
       - run: sudo docker-php-ext-install exif
       - run: sudo docker-php-ext-enable exif
