--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,10 +24,11 @@ jobs:
       - run: sudo apt-get install xfonts-75dpi xfonts-base
       - run: sudo apt-get install wkhtmltopdf
       - run: sudo mv  `which wkhtmltopdf` /usr/local/bin/wkhtmltopdf
-      - run: sudo pecl install -o -f imagick
+#      - run: sudo pecl install -o -f imagick
       - run: sudo docker-php-ext-install zip
       - run: sudo docker-php-ext-install exif
       - run: sudo docker-php-ext-enable exif
+      - run: sudo docker-php-ext-install imagick
       - run: sudo docker-php-ext-enable imagick
 
       # Download and cache dependencies
