--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,15 +20,15 @@ jobs:
       - checkout
 
       - run: sudo apt-get update
-      - run: sudo apt-get install -y libmagickwand-dev --no-install-recommends
+      - run: sudo apt-get -y install gcc make autoconf libc-dev pkg-config
+      - run: sudo apt-get install -y libmagickwand-dev
       - run: sudo apt-get install xfonts-75dpi xfonts-base
       - run: sudo apt-get install wkhtmltopdf
       - run: sudo mv  `which wkhtmltopdf` /usr/local/bin/wkhtmltopdf
-#      - run: sudo pecl install -o -f imagick
       - run: sudo docker-php-ext-install zip
       - run: sudo docker-php-ext-install exif
       - run: sudo docker-php-ext-enable exif
-      - run: sudo docker-php-ext-install imagick
+      - run: sudo pecl install imagick
       - run: sudo docker-php-ext-enable imagick
 
       # Download and cache dependencies
