--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,38 +1,34 @@
-# PHP CircleCI 2.0 configuration file
-# See: https://circleci.com/docs/2.0/language-php/
-version: 2
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/configuration-reference
+version: 2.1
 
 # Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+# See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
   build:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
     docker:
       # Specify the version you desire here
-      - image: circleci/php:8.0-node-browsers
+      # See: https://circleci.com/developer/images/image/cimg/php
+      - image: cimg/php:8.2-browsers
 
     # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
     steps:
+      # Checkout the code as the first step.
       - checkout
 
-      # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: sudo apt-get update
-      - run: sudo apt-get install -y libmagickwand-dev --no-install-recommends
-      # - run: sudo apt-get install -y libjpeg-turbo8
+      - run: sudo apt-get -y install gcc make autoconf libc-dev pkg-config
+      - run: sudo apt-get install -y libmagickwand-dev
       - run: sudo apt-get install xfonts-75dpi xfonts-base
-      # - run: sudo rm -rf /var/lib/apt/lists/*
       - run: sudo apt-get install wkhtmltopdf
       - run: sudo mv  `which wkhtmltopdf` /usr/local/bin/wkhtmltopdf
-      # - run: sudo wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.bionic_amd64.deb
-      # - run: sudo apt install ./wkhtmltox_0.12.6-1.bionic_amd64.deb
-      # - run: sudo cp /usr/local/bin/wkhtmlto* /usr/bin/
-      - run: sudo pecl install imagick
+      - run: sudo apt install php-imagick
       - run: sudo docker-php-ext-install zip
       - run: sudo docker-php-ext-install exif
       - run: sudo docker-php-ext-enable exif
-      - run: sudo docker-php-ext-enable imagick
 
       # Download and cache dependencies
       - restore_cache:
